# Epico

./: .gitignore  CMakeLists.txt  CMakeSettings.json  vcpkg.json
assets/: CMakeLists.txt
assets/models/: cubes.glb  dog.mtl  poopy_newpole.mtl  torus.glb
assets/shaders/: phong.frag  phong.vert  primitives.h  toon.frag  toon.vert  triangle.frag  vertex.frag  vertex.vert
source/: CMakeLists.txt  factory.h  fs.cpp  fs.h  globals.h  main.cpp  math.cpp  math.h  mathlib.cpp  mathlib.h  pch.h  stdafx.h  vulkan.cpp  vulkan.h
source/app/: CMakeLists.txt  appcontext.h  appstate.h  main.cpp
source/platform/: platform.h  platform_linux.h  platform_shared.h  platform_win32.h  platform_windows.h
source/proto/: vkproto.proto
source/renderer/: CMakeLists.txt  abstractrenderer.h  buffer.cpp  buffer.h  image.cpp  image.h  info.cpp  info.h  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  primitives.cpp  primitives.h  renderable.cpp  renderable.h  renderer.cpp  renderer.h  tools.h  voxel.cpp  voxel.h  vulkan.cpp  vulkan.h
source/renderer/blank/: CMakeLists.txt  rendererimpl.cpp  rendererimpl.h
source/renderer/vk/: CMakeLists.txt  info.cpp  info.h  pipeline.cpp  pipeline.h  primitives.cpp  primitives.h  rendererimpl.cpp  rendererimpl.h  stdafx.h  tools.h  vkcommandpool.cpp  vkcommandpool.h  vkdevice.cpp  vkdevice.h  vkinstance.cpp  vkinstance.h  vksurface.cpp  vksurface.h  vkswapchain.cpp  vkswapchain.h  vulkan.cpp  vulkan.h
